[tool.poetry]
name = "lightorgan"
version = "1.1.0"
description = ""
license = "GPL-3.0-or-later"
authors = ["BurningKarl <10158964+BurningKarl@users.noreply.github.com>"]
readme = "README.md"

[[tool.poetry.source]]
name = "piwheels"
url = "https://piwheels.org/simple/"
default = false
secondary = false

[tool.poetry.dependencies]
python = ">=3.7,<3.8"
llvmlite = {path = "llvmlite-0.37.0-cp37-cp37m-linux_armv7l.whl"}
appdirs = "1.4.4"
audioread = "2.1.9"
certifi = "2021.5.30"
cffi = "1.14.6"
charset-normalizer = "2.0.4"
decorator = "5.0.9"
easing-functions = "1.0.4"
idna = "3.2"
joblib = "1.0.1"
librosa = "0.8.1"
logzero = "1.7.0"
numba = "0.54.0"
numpy = "1.20.3"
packaging = "21.0"
pooch = "1.5.1"
pyalsaaudio = "0.9.0"
pycparser = "2.20"
pyparsing = "2.4.7"
requests = "2.26.0"
resampy = "0.2.2"
rpi-ws281x = "4.3.0"
samplerate = "0.1.0"
scikit-learn = "0.24.2"
scipy = "1.7.1"
six = "1.16.0"
SoundFile = "0.10.3.post1"
threadpoolctl = "2.2.0"
urllib3 = "1.26.6"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
