[tool.poetry]
name = "lightorgan"
version = "1.1.0"
description = ""
license = "GPL-3.0-or-later"
authors = ["BurningKarl <10158964+BurningKarl@users.noreply.github.com>"]
readme = "README.md"

[[tool.poetry.source]]
name = "piwheels"
url = "https://piwheels.org/simple/"
default = false
secondary = false

[tool.poetry.dependencies]
python = ">=3.7,<3.8"
rpi-ws281x = "^4.3.0"
pyalsaaudio = "^0.9.0"
llvmlite = {path = "llvmlite-0.37.0-cp37-cp37m-linux_armv7l.whl"}
librosa = "^0.8.1"
numba = "^0.54.0"
numpy = ">=1.20.3,<1.21.5"
scipy = "^1.7.1"
logzero = "^1.7.0"

[tool.poetry.dev-dependencies]
black = "^22.10.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
