[project]
name = "lightorgan"
version = "1.1.0"
description = ""
license = "GPL-3.0-or-later"
authors = [
  {name = "BurningKarl", email = "10158964+BurningKarl@users.noreply.github.com"},
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "librosa>=0.11.0",
    "logzero>=1.7.0",
    "numpy>=2.2.6",
    "pyalsaaudio>=0.11.0",
    "rpi-ws281x>=5.0.0",
    "scipy>=1.15.3",
]

[dependency-groups]
dev = [
    "black>=25.1.0",
]
